--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
-title: Time Machine theme
-description: Time Machine is a theme for GitHub Pages.
+title: A Life Long Work
+description: Synthesizing new ideas
 show_downloads: true
 google_analytics:
 theme: jekyll-theme-time-machine
