--- a/_config.yml
+++ b/_config.yml
@@ -3,6 +3,6 @@ description: A synthesis of new ideas
 show_downloads: true
 google_analytics:
 theme: jekyll-theme-time-machine
-content: ./pages/home.html
+content: url(./pages/home.html)
 
    
